# dbus-sensors

./: .gitignore  meson.build  meson_options.txt
include/: NVMeController.hpp  NVMeIntf.hpp  NVMeMi.hpp  NVMeProgress.hpp  NVMeSubsys.hpp  NVMeVolume.hpp
src/: ADCSensorMain.cpp  AsioHelper.hpp  ChassisIntrusionSensor.cpp  DeviceMgmt.hpp  ExitAirTempSensor.cpp  FanMain.cpp  HwmonTempMain.cpp  IntelCPUSensorMain.cpp  IntrusionSensorMain.cpp  IpmbSensor.cpp  MctpEndpoint.cpp  MctpEndpoint.hpp  NVMeBasic.cpp  NVMeController.cpp  NVMeController.hpp  NVMeDevice.cpp  NVMeDevice.hpp  NVMeDrive.cpp  NVMeDrive.hpp  NVMeError.cpp  NVMeError.hpp  NVMeFakePlugin.cpp  NVMeFakePlugin.hpp  NVMeIntf.hpp  NVMeMi.cpp  NVMeMi.hpp  NVMeMiFake.hpp  NVMePlugin.cpp  NVMePlugin.hpp  NVMeProgress.cpp  NVMeProgress.hpp  NVMeSensor.cpp  NVMeSensor.hpp  NVMeSensorMain.cpp  NVMeStorage.cpp  NVMeStorage.hpp  NVMeSubsys.cpp  NVMeSubsys.hpp  NVMeUtil.hpp  NVMeVolume.cpp  (+13 more)
subprojects/: libnvme.wrap  libpeci.wrap  phosphor-dbus-interfaces.wrap  phosphor-objmgr.wrap
subprojects/packagefiles/libnvme/: 0001-Assign-default-value-on-variable-definition.patch  0001-mi-don-t-return-from-mi_mctp_submit-with-a-tag-held.patch  0001-mi_admin_xfer-set-data-fields-based-on-opcode.patch  0001-test-Intialize-the-variables-for-mi-tests.patch  0002-mi-fix-the-return-error-code.patch  0003-mi-fix-the-rc-for-nvme_mi_scan_ep.patch  0004-mi-avoid-changing-default-ep-timeout-during-admin_pa.patch  0005-libnvme-mi-add-timeout-functions-to-.map.patch
subprojects/packagefiles/pdi/: 0001-Inventory-Add-volume-attach-detach-properties.patch  0001-Remove-run-ci.patch  0002-Inventory-Add-StorageControllerSecurity-interface.patch  0003-NVMe-Add-interfaces-for-NVMe-specific-properties.patch  0004-Add-Common.DeviceOperationFailed-error.patch  0005-Add-DriveErase-interface.patch
tests/: libnvme_mi_mock.cpp  libnvme_mock.cpp  mapper_wrapper  meson.build  setup.sh  test_nvme_mi.cpp  test_nvme_mi_recovery.cpp
yaml/xyz/openbmc_project/NVMe/: NVMeAdmin.interface.yaml
