option('adc', type: 'feature', value: 'disabled', description: 'Enable ADC sensor.',)
option('intel-cpu', type: 'feature', value: 'disabled', description: 'Enable CPU sensor.',)
option('exit-air', type: 'feature', value: 'disabled', description: 'Enable exit air sensor.',)
option('fan', type: 'feature', value: 'disabled', description: 'Enable fan sensor.',)
option('hwmon-temp', type: 'feature', value: 'disabled', description: 'Enable HWMON temperature sensor.',)
option('intrusion', type: 'feature', value: 'disabled', description: 'Enable intrusion sensor.',)
option('ipmb', type: 'feature', value: 'disabled', description: 'Enable IPMB sensor.',)
option('mcu', type: 'feature', value: 'disabled', description: 'Enable MCU sensor.',)
option('nvme', type: 'feature', value: 'enabled', description: 'Enable NVMe sensor.',)
option('psu', type: 'feature', value: 'disabled', description: 'Enable PSU sensor.',)
option('external', type: 'feature', value: 'disabled', description: 'Enable External sensor.',)
option('tests', type: 'feature', value: 'enabled', description: 'Build tests.',)
option('validate-unsecure-feature', type : 'feature', value : 'disabled', description : 'Enables unsecure features required by validation. Note: mustbe turned off for production images.',)
option('insecure-sensor-override', type : 'feature', value : 'disabled', description : 'Enables Sensor override feature without any check.',)
option('build-type', type: 'combo', choices: ['ci', 'bitbake'], value: 'ci', yield: false)
